--- a/crime.ipynb
+++ b/crime.ipynb
@@ -1745,11 +1745,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {
     "id": "3uLVPdfOBnvF"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RasterioIOError",
+     "evalue": "HTTP response code: 404",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCPLE_HttpResponseError\u001b[0m                    Traceback (most recent call last)",
+      "File \u001b[1;32mrasterio\\\\_base.pyx:310\u001b[0m, in \u001b[0;36mrasterio._base.DatasetBase.__init__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_base.pyx:221\u001b[0m, in \u001b[0;36mrasterio._base.open_dataset\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mrasterio\\\\_err.pyx:359\u001b[0m, in \u001b[0;36mrasterio._err.exc_wrap_pointer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCPLE_HttpResponseError\u001b[0m: HTTP response code: 404",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mRasterioIOError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[51], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m rasterPath\u001b[38;5;241m=\u001b[39mmainGitHub\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWORLD/raster/GHS_SMOD_E2030_GLOBE_R2023A_54009_1000_V2_0.tif\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m populatedCodes\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m21\u001b[39m,\u001b[38;5;241m22\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m30\u001b[39m]\n\u001b[1;32m----> 7\u001b[0m dasymetric_municipalities\u001b[38;5;241m=\u001b[39mdasy(\n\u001b[0;32m      8\u001b[0m     source_df\u001b[38;5;241m=\u001b[39mcountiesMA_source,\n\u001b[0;32m      9\u001b[0m     target_df\u001b[38;5;241m=\u001b[39mmunicipalitiesMA_target,\n\u001b[0;32m     10\u001b[0m     raster\u001b[38;5;241m=\u001b[39mrasterPath,\n\u001b[0;32m     11\u001b[0m     pixel_values\u001b[38;5;241m=\u001b[39mpopulatedCodes,\n\u001b[0;32m     12\u001b[0m     extensive_variables\u001b[38;5;241m=\u001b[39mmyExtensive,\n\u001b[0;32m     13\u001b[0m     intensive_variables\u001b[38;5;241m=\u001b[39mmyIntensive\n\u001b[0;32m     14\u001b[0m )\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\tobler\\dasymetric\\masked_area_interpolate.py:72\u001b[0m, in \u001b[0;36mmasked_area_interpolate\u001b[1;34m(source_df, target_df, raster, pixel_values, extensive_variables, intensive_variables, categorical_variables, allocate_total, nodata, n_jobs, codes)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28many\u001b[39m(\n\u001b[0;32m     68\u001b[0m     source_df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39mduplicated()\n\u001b[0;32m     69\u001b[0m ), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe index of the source_df cannot contain duplicates.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     71\u001b[0m \u001b[38;5;66;03m#  create a vector mask from the raster data\u001b[39;00m\n\u001b[1;32m---> 72\u001b[0m raster_mask \u001b[38;5;241m=\u001b[39m extract_raster_features(\n\u001b[0;32m     73\u001b[0m     source_df, raster, pixel_values, nodata, n_jobs, collapse_values\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     74\u001b[0m )\n\u001b[0;32m     75\u001b[0m \u001b[38;5;66;03m#  create a column in the source_df to dissolve on\u001b[39;00m\n\u001b[0;32m     76\u001b[0m idx_name \u001b[38;5;241m=\u001b[39m source_df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01mif\u001b[39;00m source_df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124midx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\tobler\\dasymetric\\raster_tools.py:112\u001b[0m, in \u001b[0;36mextract_raster_features\u001b[1;34m(gdf, raster_path, pixel_values, nodata, n_jobs, collapse_values)\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m n_jobs \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m    111\u001b[0m     n_jobs \u001b[38;5;241m=\u001b[39m multiprocessing\u001b[38;5;241m.\u001b[39mcpu_count()\n\u001b[1;32m--> 112\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m rio\u001b[38;5;241m.\u001b[39mopen(raster_path) \u001b[38;5;28;01mas\u001b[39;00m src:\n\u001b[0;32m    113\u001b[0m     raster_crs \u001b[38;5;241m=\u001b[39m src\u001b[38;5;241m.\u001b[39mcrs\u001b[38;5;241m.\u001b[39mto_dict()\n\u001b[0;32m    114\u001b[0m     gdf \u001b[38;5;241m=\u001b[39m gdf\u001b[38;5;241m.\u001b[39mto_crs(raster_crs)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\rasterio\\env.py:463\u001b[0m, in \u001b[0;36mensure_env_with_credentials.<locals>.wrapper\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    460\u001b[0m     session \u001b[38;5;241m=\u001b[39m DummySession()\n\u001b[0;32m    462\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m env_ctor(session\u001b[38;5;241m=\u001b[39msession):\n\u001b[1;32m--> 463\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\rasterio\\__init__.py:368\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(fp, mode, driver, width, height, count, crs, transform, dtype, nodata, sharing, opener, **kwargs)\u001b[0m\n\u001b[0;32m    365\u001b[0m     path \u001b[38;5;241m=\u001b[39m _parse_path(raw_dataset_path)\n\u001b[0;32m    367\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 368\u001b[0m     dataset \u001b[38;5;241m=\u001b[39m DatasetReader(path, driver\u001b[38;5;241m=\u001b[39mdriver, sharing\u001b[38;5;241m=\u001b[39msharing, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    369\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr+\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    370\u001b[0m     dataset \u001b[38;5;241m=\u001b[39m get_writer_for_path(path, driver\u001b[38;5;241m=\u001b[39mdriver)(\n\u001b[0;32m    371\u001b[0m         path, mode, driver\u001b[38;5;241m=\u001b[39mdriver, sharing\u001b[38;5;241m=\u001b[39msharing, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs\n\u001b[0;32m    372\u001b[0m     )\n",
+      "File \u001b[1;32mrasterio\\\\_base.pyx:312\u001b[0m, in \u001b[0;36mrasterio._base.DatasetBase.__init__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mRasterioIOError\u001b[0m: HTTP response code: 404"
+     ]
+    }
+   ],
    "source": [
     "from tobler.dasymetric import masked_area_interpolate as dasy\n",
     "\n",
